cli/src/tests/error/variable_name.sibs
$on$e
$two#one
$SdSd(asd